refactor(workflows): 更新URL解析方式以使用WHATWG URL API- 使用 new URL() 替代已弃用的 url.parse 方法 - 更新端口获取逻辑以支持自定义端口 - 修改路径获取方式以正确处理查询参数- 保持原有功能逻辑不变- 提升代码的现代性和兼容性

--- a/.github/workflows/keep-cookie-alive.yml
+++ b/.github/workflows/keep-cookie-alive.yml
@@ -83,13 +83,13 @@ jobs:
           
           console.log(`Making ${siteConfig.method} request to ${siteConfig.endpoint} at ${new Date().toISOString()}`);
           
-          // 解析URL以获取主机名和路径
-          const parsedUrl = url.parse(siteConfig.endpoint);
+          // 解析URL以获取主机名和路径 (使用 WHATWG URL API 替代已弃用的 url.parse)
+          const parsedUrl = new URL(siteConfig.endpoint);
           
           const options = {
             hostname: parsedUrl.hostname,
-            port: parsedUrl.protocol === 'https:' ? 443 : 80,
-            path: parsedUrl.path || '/',
+            port: parsedUrl.port || (parsedUrl.protocol === 'https:' ? 443 : 80),
+            path: parsedUrl.pathname + parsedUrl.search,
             method: siteConfig.method,
             headers: siteConfig.headers
           };
